--- a/src/main/resources/www/scores/scores.css
+++ b/src/main/resources/www/scores/scores.css
@@ -15,8 +15,8 @@
 
 .scores_container .heading
 {
-  background-color: var(--select-background-color);
-  color: var(--select-color);
+  background-color: var(--accent-color);
+  color: var(--foreground-color);
   display: grid;
   grid-row: 1;
   grid-template-columns: 10em 1fr 12em 12em 12em 12em;
@@ -33,8 +33,8 @@
 
 .scores_container .search
 {
-  background-color: var(--select-background-color);
-  color: var(--select-color);
+  background-color: var(--accent-color);
+  color: var(--foreground-color);
   display: grid;
   grid-row: 3;
   grid-template-columns: 1fr;
@@ -54,7 +54,7 @@
 
 .scores_container .row:hover
 {
-  border: 0.1em solid var(--link-color);
+  border: 0.1em solid var(--accent-color);
 }
 
 .scores_container .number
@@ -164,9 +164,9 @@
 {
   align-items: center;
   background-color: var(--background-color);
-  border: 0.25em solid var(--link-color);
+  border: 0.25em solid var(--accent-color);
   border-radius: 1em;
-  color: var(--color);
+  color: var(--foreground-color);
   display: grid;
   gap: 0 0;
   grid-auto-flow: row;
@@ -190,7 +190,7 @@
 
 .scores_exchange_container .team1
 {
-  border-bottom: 0.05em solid var(--color);
+  border-bottom: 0.05em solid var(--foreground-color);
   font-size: 1.5em;
   grid-row: 3;
   text-align: center;
@@ -199,7 +199,7 @@
 
 .scores_exchange_container .match1
 {
-  border-bottom: 0.05em solid var(--color);
+  border-bottom: 0.05em solid var(--foreground-color);
   font-size: 1.5em;
   grid-row: 4;
   text-align: center;
