HydroDynamics and Into Orbit scoresheets

--- a/src/main/resources/www/scoreboard/scoreboard.css
+++ b/src/main/resources/www/scoreboard/scoreboard.css
@@ -91,53 +91,88 @@ html, body
     ". .     .     .     .     .     .     .     .     .     .     ." ;
 }
 
-.logo1 { grid-area: logo1; }
+.logo1
+{
+  align-items: center;
+  display: flex;
+  grid-area: logo1;
+  justify-content: center;
+}
+
+.logo1 img
+{
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .event
 {
   grid-area: event;
   font-size: 200%;
 }
-.logo2 { grid-area: logo2; }
+
+.logo2
+{
+  align-items: center;
+  display: flex;
+  grid-area: logo2;
+  justify-content: center;
+}
+
+.logo2 img
+{
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .plt
 {
   background-color: var(--accent-color);
   grid-area: plt;
 }
+
 .numt
 {
   background-color: var(--accent-color);
   grid-area: numt;
 }
+
 .namet
 {
   background-color: var(--accent-color);
   grid-area: namet;
 }
+
 .hight
 {
   background-color: var(--accent-color);
   grid-area: hight;
 }
+
 .m1t
 {
   background-color: var(--accent-color);
   grid-area: m1t;
 }
+
 .m2t
 {
   background-color: var(--accent-color);
   grid-area: m2t;
 }
+
 .m3t
 {
   background-color: var(--accent-color);
   grid-area: m3t;
 }
+
 .m4t
 {
   background-color: var(--accent-color);
   grid-area: m4t;
 }
+
 .pl0 { grid-area: pl0; }
 .num0 { grid-area: num0; }
 .name0 { grid-area: name0; }
