--- a/src/main/resources/www/styles.css
+++ b/src/main/resources/www/styles.css
@@ -105,7 +105,8 @@ input[type="date"]:focus
   outline: 0;
 }
 
-input[type="text"]
+input[type="text"],
+input[type="password"]
 {
   background-color: var(--background-color);
   border: 0;
@@ -119,12 +120,14 @@ input[type="text"]
   width: 100%;
 }
 
-input[type="text"]:focus
+input[type="text"]:focus,
+input[type="password"]:focus
 {
   outline: 0;
 }
 
-input[type="text"]::-webkit-input-placeholder
+input[type="text"]::-webkit-input-placeholder,
+input[type="password"]::-webkit-input-placeholder
 {
   font-family: "FontAwesome";
 }
@@ -168,6 +171,13 @@ select
 .right
 {
   float: right;
+}
+
+.accent
+{
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  color: var(--foreground-color);
 }
 
 .gray
@@ -277,11 +287,9 @@ select
   display: grid;
   gap: 0 0;
   grid-auto-flow: row;
-  grid-template-columns: 20em 1fr;
-  height: 20em;
+  grid-template-columns: 20em 25em;
   justify-items: center;
   padding: 1em;
-  width: 50em;
 }
 
 .about_container div
